[package]
name = "rust_implementation"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
chrono = { version = "0.4.41", features = ["serde"] }
iso8601-duration = "0.2.0"
tokio = { version = "1.45.1", features = ["full"] }
axum = "0.8.4"
enum_dispatch = "0.3.13"